--- a/src/body/streamer/obs/config/basic/profiles/Untitled/basic.ini
+++ b/src/body/streamer/obs/config/basic/profiles/Untitled/basic.ini
@@ -91,8 +91,8 @@ RecSplitFileSize=2048
 RecRB=false
 RecRBTime=20
 RecRBSize=512
-AudioEncoder=libfdk_aac
-RecAudioEncoder=libfdk_aac
+AudioEncoder=aac
+RecAudioEncoder=aac
 RescaleRes=1920x1080
 RecRescaleRes=1920x1080
 RecSplitFileType=Time
