--- a/src/body/streamer/requirements.txt
+++ b/src/body/streamer/requirements.txt
@@ -1,9 +1,8 @@
-fastapi
+starlette
 uvicorn
-mcp
-requests
 httpx
 obs-websocket-py
 google-api-python-client
 google-auth-oauthlib
 google-auth-httplib2
+python-multipart
