--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,14 @@ YOUTUBE_LIVE_CHAT_ID=your_live_chat_id_here
 
 # OBS WebSocket (Optional - for secure connection)
 OBS_PASSWORD=
+
+# Streaming Mode (set to 'true' to use YouTube Live streaming instead of recording)
+STREAMING_MODE=false
+
+# YouTube OAuth Credentials Path (required for streaming mode)
+YOUTUBE_CLIENT_SECRET_PATH=/secret/google_client_secret.json
+YOUTUBE_TOKEN_PATH=/secret/yt_token.json
+
+# Optional: Set credentials as JSON strings to avoid file mounts
+# YOUTUBE_CLIENT_SECRET_JSON='{"web":{"client_id":"...","project_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_secret":"...","redirect_uris":["..."]}}'
+# YOUTUBE_TOKEN_JSON='{"token":"...","refresh_token":"...","token_uri":"...","client_id":"...","client_secret":"...","scopes":["..."],"expiry":"..."}'
