--- a/src/body/streamer/obs/supervisord.conf
+++ b/src/body/streamer/obs/supervisord.conf
@@ -4,6 +4,15 @@ user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
+[program:pulseaudio]
+command=/usr/bin/pulseaudio --start --exit-idle-time=-1 --disallow-exit --daemonize=no
+autostart=true
+autorestart=true
+priority=5
+environment=XDG_RUNTIME_DIR="/tmp"
+stdout_logfile=/var/log/supervisor/pulseaudio.log
+stderr_logfile=/var/log/supervisor/pulseaudio_err.log
+
 [program:xvfb]
 command=/usr/bin/Xvfb :99 -screen 0 1920x1280x24
 autostart=true
