--- a/src/body/streamer/obs/config/global.ini
+++ b/src/body/streamer/obs/config/global.ini
@@ -1,8 +1,77 @@
 [General]
-FirstRun=false
+FirstRun=true
+ShowConfigWizard=false
+LastWizardVersion=30020003
+AppConfigVersion=1
+WAS_WIZARD_RUN=true
+AutomaticUsageSelection=1
+OBSVersion=30.2.3
+Pre19Defaults=false
+Pre21Defaults=false
+Pre23Defaults=false
+Pre24.1Defaults=false
+MaxLogs=10
+InfoIncrement=1
+ProcessPriority=Normal
+EnableAutoUpdates=true
+ConfirmOnExit=true
+HotkeyFocusType=NeverDisableHotkeys
+YtDockCleanupDone=true
+InstallGUID=0fdb6e14028aeff3e6519d56f39665eaf78b757b
+InfoLastVersion=32993938964480
+
+[Basic]
+Profile=Untitled
+ProfileDir=Untitled
+SceneCollection=Untitled
+SceneCollectionFile=Untitled
+ConfigOnNewProfile=true
 
 [BasicWindow]
 PreviewDisabled=true
+geometry=AdnQywAAAAAAAAAAAAAAAAAAB38AAAQM
+PreviewEnabled=true
+PreviewProgramMode=false
+SceneDuplicationMode=true
+SwapScenesMode=true
+SnappingEnabled=true
+ScreenSnapping=true
+SourceSnapping=true
+CenterSnapping=false
+SnapDistance=10
+SpacingHelpersEnabled=true
+RecordWhenStreaming=false
+KeepRecordingWhenStreamStops=false
+SysTrayEnabled=true
+SysTrayWhenStarted=false
+SaveProjectors=false
+ShowTransitions=true
+ShowListboxToolbars=true
+ShowStatusBar=true
+ShowSourceIcons=true
+ShowContextToolbars=true
+StudioModeLabels=true
+VerticalVolControl=false
+MultiviewMouseSwitch=true
+MultiviewDrawNames=true
+MultiviewDrawAreas=true
+MediaControlsCountdownTimer=true
 
 [Audio]
 DisableAudio=false
+
+[OBSWebSocket]
+
+[Video]
+Renderer=OpenGL
+
+[Accessibility]
+SelectRed=255
+SelectGreen=65280
+SelectBlue=16744192
+MixerGreen=2522918
+MixerYellow=2523007
+MixerRed=2500223
+MixerGreenActive=5046092
+MixerYellowActive=5046271
+MixerRedActive=5000447
