--- a/src/body/streamer/obs/config/basic/profiles/Untitled/basic.ini
+++ b/src/body/streamer/obs/config/basic/profiles/Untitled/basic.ini
@@ -12,25 +12,105 @@ FPSInt=30
 FPSNum=30
 FPSDen=1
 ScaleType=bicubic
-ColorFormat=I420
+ColorFormat=NV12
 ColorSpace=709
 ColorRange=Partial
+SdrWhiteLevel=300
+HdrNominalPeakLevel=1000
 
 [Output]
 Mode=Simple
+FilenameFormatting=%CCYY-%MM-%DD %hh-%mm-%ss
+DelayEnable=false
+DelaySec=20
+DelayPreserve=true
+Reconnect=true
+RetryDelay=2
+MaxRetries=25
+BindIP=default
+IPFamily=IPv4+IPv6
+NewSocketLoopEnable=false
+LowLatencyEnable=false
 
 [SimpleOutput]
 FilePath=/tmp
 RecFormat=mkv
-RecEncoder=ffmpeg_nvenc
-StreamEncoder=ffmpeg_nvenc
-StreamAudioEncoder=aac
+RecQuality=Stream
+RecEncoder=nvenc
+RecFormat2=mkv
 VBitrate=2500
-ABitrate=128
+ABitrate=160
 UseAdvanced=false
 Preset=p4
+NVENCPreset2=p2
+RecRB=false
+RecRBTime=20
+RecRBSize=512
+RecRBPrefix=Replay
+StreamAudioEncoder=aac
+RecAudioEncoder=aac
+RecTracks=1
+StreamEncoder=nvenc
+
+[Stream1]
+IgnoreRecommended=false
+EnableMultitrackVideo=false
+MultitrackVideoMaximumAggregateBitrateAuto=true
+MultitrackVideoMaximumVideoTracksAuto=true
+
+[AdvOut]
+ApplyServiceSettings=true
+UseRescale=false
+TrackIndex=1
+VodTrackIndex=2
+Encoder=obs_x264
+RecType=Standard
+RecFilePath=/root
 RecFormat2=mkv
+RecUseRescale=false
+RecTracks=1
+RecEncoder=none
+FLVTrack=1
+StreamMultiTrackAudioMixes=1
+FFOutputToFile=true
+FFFilePath=/root
+FFVBitrate=2500
+FFVGOPSize=250
+FFUseRescale=false
+FFIgnoreCompat=false
+FFABitrate=160
+FFAudioMixes=1
+Track1Bitrate=160
+Track2Bitrate=160
+Track3Bitrate=160
+Track4Bitrate=160
+Track5Bitrate=160
+Track6Bitrate=160
+RecSplitFileTime=15
+RecSplitFileSize=2048
+RecRB=false
+RecRBTime=20
+RecRBSize=512
+AudioEncoder=libfdk_aac
+RecAudioEncoder=libfdk_aac
+RescaleRes=1920x1080
+RecRescaleRes=1920x1080
+RecSplitFileType=Time
+FFFormat=
+FFFormatMimeType=
+FFRescaleRes=1920x1080
+FFVEncoderId=0
+FFVEncoder=
+FFAEncoderId=0
+FFAEncoder=
 
 [Audio]
+MonitoringDeviceId=default
+MonitoringDeviceName=Default
 SampleRate=48000
 ChannelSetup=Stereo
+MeterDecayRate=23.53
+PeakMeterType=0
+
+[Panels]
+CookieId=C4FC6FB7EBEFDFDE
