--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 # AI Tuber Configuration
 GOOGLE_API_KEY=your_gemini_api_key_here
 
-# YouTube Live API (Optional - for comment fetching)
-YOUTUBE_API_KEY=your_youtube_api_key_here
+# YouTube Live Chat ID (Optional - can be auto-detected from broadcast)
 YOUTUBE_LIVE_CHAT_ID=your_live_chat_id_here
 
 # OBS WebSocket (Optional - for secure connection)
