--- a/src/body/streamer/obs/config/basic/profiles/Untitled/basic.ini
+++ b/src/body/streamer/obs/config/basic/profiles/Untitled/basic.ini
@@ -36,13 +36,13 @@ LowLatencyEnable=false
 FilePath=/tmp
 RecFormat=mkv
 RecQuality=Stream
-RecEncoder=x264
+RecEncoder=nvenc
 RecFormat2=mkv
 VBitrate=2500
 ABitrate=160
 UseAdvanced=false
-Preset=veryfast
-NVENCPreset2=p5
+Preset=p4
+NVENCPreset2=p2
 RecRB=false
 RecRBTime=20
 RecRBSize=512
@@ -50,7 +50,7 @@ RecRBPrefix=Replay
 StreamAudioEncoder=aac
 RecAudioEncoder=aac
 RecTracks=1
-StreamEncoder=x264
+StreamEncoder=nvenc
 
 [Stream1]
 IgnoreRecommended=false
