--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ YOUTUBE_TOKEN_PATH=/secret/yt_token.json
 # Optional: Set credentials as JSON strings to avoid file mounts
 # YOUTUBE_CLIENT_SECRET_JSON='{"web":{"client_id":"...","project_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_secret":"...","redirect_uris":["..."]}}'
 # YOUTUBE_TOKEN_JSON='{"token":"...","refresh_token":"...","token_uri":"...","client_id":"...","client_secret":"...","scopes":["..."],"expiry":"..."}'
+
+# GCS Integration (Optional - for cloud deployment)
+GCS_BUCKET_NAME=
