--- a/opentofu/workflow.yaml
+++ b/opentofu/workflow.yaml
@@ -8,6 +8,7 @@ main:
           - body_node_name: "${body_node_name}"
           - news_collector_job: "${news_collector_job}"
           - saint_graph_job: "${saint_graph_job}"
+          - proxy_url: "${healthcheck_proxy_url}/check"
           - body_port: 8080
           - voicevox_port: 50021
 
@@ -19,37 +20,18 @@ main:
         result: news_job_result
 
     - start_body_node:
-        call: googleapis.compute.v1.instances.start
-        args:
-          instance: $${body_node_name}
-          project: $${project_id}
-          zone: $${zone}
-
-    - get_body_node_ip:
-        call: googleapis.compute.v1.instances.get
-        args:
-          instance: $${body_node_name}
-          project: $${project_id}
-          zone: $${zone}
-        result: body_node
-    - assign_ip:
-        assign:
-          - body_ip: $${body_node.networkInterfaces[0].networkIP}
-
-    - wait_for_body_ready:
         try:
-          steps:
-            - check_body_health:
-                call: http.get
-                args:
-                  url: $${"http://" + body_ip + ":" + string(body_port) + "/health"}
-                result: body_health
+          call: googleapis.compute.v1.instances.start
+          args:
+            instance: $${body_node_name}
+            project: $${project_id}
+            zone: $${zone}
         retry:
-          predicate: $${http.default_retry_predicate}
-          max_retries: 20
+          predicate: $${retry_on_stockout}
+          max_retries: 10
           backoff:
-            initial_delay: 10
-            max_delay: 60
+            initial_delay: 300
+            max_delay: 1800
             multiplier: 1.5
 
     - wait_for_voicevox_ready:
@@ -58,15 +40,77 @@ main:
             - check_voicevox_health:
                 call: http.get
                 args:
-                  url: $${"http://" + body_ip + ":" + string(voicevox_port) + "/version"}
-                result: vv_version
+                  url: $${proxy_url}
+                  query:
+                    url: $${"http://" + body_node_name + "." + zone + ".c." + project_id + ".internal:" + string(voicevox_port) + "/version"}
+                  auth:
+                    type: OIDC
+                result: vv_health
+            - init_vv_ready:
+                assign:
+                  - vv_ready: false
+            - try_parse_vv:
+                try:
+                  steps:
+                    - parse_vv:
+                        assign:
+                          - vv_ready: $${vv_health.body.ready}
+                except:
+                  as: e
+                  steps:
+                    - set_vv_not_ready:
+                        assign:
+                          - vv_ready: false
+            - verify_vv_ready:
+                switch:
+                  - condition: $${not vv_ready}
+                    raise: "Voicevox Service Not Ready"
         retry:
-          predicate: $${http.default_retry_predicate}
-          max_retries: 20
+          predicate: $${always_retry}
+          max_retries: 25
           backoff:
-            initial_delay: 10
-            max_delay: 60
-            multiplier: 1.5
+            initial_delay: 15
+            max_delay: 30
+            multiplier: 1.2
+
+    - wait_for_body_ready:
+        try:
+          steps:
+            - check_body_health:
+                call: http.get
+                args:
+                  url: $${proxy_url}
+                  query:
+                    url: $${"http://" + body_node_name + "." + zone + ".c." + project_id + ".internal:" + string(body_port) + "/vnc_lite.html"}
+                  auth:
+                    type: OIDC
+                result: body_health
+            - init_body_ready:
+                assign:
+                  - body_ready: false
+            - try_parse_body:
+                try:
+                  steps:
+                    - parse_body:
+                        assign:
+                          - body_ready: $${body_health.body.ready}
+                except:
+                  as: e
+                  steps:
+                    - set_body_not_ready:
+                        assign:
+                          - body_ready: false
+            - verify_body_ready:
+                switch:
+                  - condition: $${not body_ready}
+                    raise: "Body Service Not Ready"
+        retry:
+          predicate: $${always_retry}
+          max_retries: 25
+          backoff:
+            initial_delay: 15
+            max_delay: 30
+            multiplier: 1.2
 
     - start_streaming:
         call: googleapis.run.v1.namespaces.jobs.run
@@ -81,3 +125,33 @@ main:
           instance: $${body_node_name}
           project: $${project_id}
           zone: $${zone}
+
+# ヘルスチェック用: どのようなエラーでも常にリトライする述語
+always_retry:
+  params: [e]
+  steps:
+    - do_retry:
+        return: true
+
+# 在庫不足や一時的なエラーを判定するカスタム述語
+retry_on_stockout:
+  params: [e]
+  steps:
+    - check_tags:
+        switch:
+          - condition: $${e.tags != null and "OperationError" in e.tags}
+            return: true
+    - check_code:
+        try:
+          steps:
+            - eval_code:
+                switch:
+                  - condition: $${e.code == 503 or e.code == 429 or e.code == 500}
+                    return: true
+        except:
+          as: err
+          steps:
+            - ignore_key_error:
+                return: false
+    - fallback:
+        return: false
