Add voicevox dictionaly

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ YOUTUBE_TOKEN_PATH=/secret/yt_token.json
 
 # GCS Integration (Optional - for cloud deployment)
 GCS_BUCKET_NAME=
+
+# VOICEVOX Configuration
+# Path to VOICEVOX data directory (User Dictionary, etc.)
+# Windows: C:/Users/<User>/AppData/Roaming/voicevox
+# Linux/Docker: ./data/voicevox
+VOICEVOX_DATA_DIR=./data/voicevox
