infra: automate CI/CD with Cloud Build triggers and IAM permissions

--- a/opentofu/terraform.tfvars.example
+++ b/opentofu/terraform.tfvars.example
@@ -2,6 +2,9 @@ project_id              = "your-gcp-project-id"
 region                  = "asia-northeast1"
 zone                    = "asia-northeast1-a"
 bucket_name             = "ai-tuber-data-your-project-id"
+character_name          = "ren"
+github_owner            = "your-github-username"
+github_repo_name        = "ai-tuber"
 enable_spot_instance    = true
 repository_name         = "ai-tuber"
 admin_ip_ranges         = ["YOUR_PUBLIC_IP/32"]
