refactor: rename repository variables to github_repository and artifact_registry_name

--- a/opentofu/terraform.tfvars.example
+++ b/opentofu/terraform.tfvars.example
@@ -4,7 +4,7 @@ zone                    = "asia-northeast1-a"
 bucket_name             = "ai-tuber-data-your-project-id"
 character_name          = "ren"
 github_owner            = "your-github-username"
-github_repo_name        = "ai-tuber"
+github_repository       = "ai-tuber"
 enable_spot_instance    = true
-repository_name         = "ai-tuber"
+artifact_registry_name  = "ai-tuber"
 admin_ip_ranges         = ["YOUR_PUBLIC_IP/32"]
