--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - STREAM_TITLE=${STREAM_TITLE:-}
       - STREAM_DESCRIPTION=${STREAM_DESCRIPTION:-}
       - STREAM_PRIVACY=${STREAM_PRIVACY:-private}
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app/src
       - ADK_TELEMETRY=false
       - NO_PROXY=body-streamer,tools-weather,localhost,127.0.0.1
       # SaaS-ready configuration
@@ -30,7 +30,7 @@ services:
         condition: service_healthy
       tools-weather:
         condition: service_healthy
-    command: python -m src.saint_graph.main
+    command: python -m saint_graph.main
 
   # --- Tools Weather (MCP Server) ---
   tools-weather:
