--- a/scripts/news_collector/Dockerfile
+++ b/scripts/news_collector/Dockerfile
@@ -10,8 +10,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY scripts/news_collector/ /app/scripts/news_collector/
 COPY src/saint_graph/config.py /app/src/saint_graph/config.py
 
-# Set Python path
-ENV PYTHONPATH=/app
+# Set Python path (include src for top-level packages, and app for scripts)
+ENV PYTHONPATH=/app/src:/app
 
 # Run the news collector
 CMD ["python", "-m", "scripts.news_collector.news_agent"]
