--- a/src/tools/weather/Dockerfile
+++ b/src/tools/weather/Dockerfile
@@ -14,5 +14,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy source code (assuming docker-compose context is root)
 COPY src/tools/weather /app/src/tools/weather
 
+# Set Python path
+ENV PYTHONPATH=/app/src
+
 # Run the application
-CMD ["python", "-m", "src.tools.weather.main"]
+CMD ["python", "-m", "tools.weather.main"]
