Dev/saas ready (#48)
- Add src/infra and tests/infra to project structure docs
- Add STORAGE_TYPE and SECRET_PROVIDER_TYPE to env var reference
- Update prompt_loader.py and config.py descriptions
- Fix remaining saas references in __init__.py files
---------

Co-authored-by: Antigravity Agent <antigravity@example.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,15 +18,19 @@ services:
       - STREAM_TITLE=${STREAM_TITLE:-}
       - STREAM_DESCRIPTION=${STREAM_DESCRIPTION:-}
       - STREAM_PRIVACY=${STREAM_PRIVACY:-private}
-      - PYTHONPATH=/app
+      - PYTHONPATH=/app/src
       - ADK_TELEMETRY=false
       - NO_PROXY=body-streamer,tools-weather,localhost,127.0.0.1
+      # SaaS-ready configuration
+      - STORAGE_TYPE=filesystem
+      - SECRET_PROVIDER_TYPE=env
+      - CHARACTER_NAME=${CHARACTER_NAME:-ren}
     depends_on:
       body-streamer:
         condition: service_healthy
       tools-weather:
         condition: service_healthy
-    command: python -m src.saint_graph.main
+    command: python -m saint_graph.main
 
   # --- Tools Weather (MCP Server) ---
   tools-weather:
